--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class = "title">Number 1 - I'm a class!</p>
     <div id="bigblue">Number 2 - I'm one ID.</div>
     <p class = "title important">Number 3 - I'm a class, but cooler!</p>
-    <div id="boldred">Number 4 - I'm another ID.</div>
+    <div id="boldgreen">Number 4 - I'm another ID.</div>
     <p class="title">Number 5 - I'm a class!</p>
   </body>
 </html>
